--- a/bibdatabase.bib
+++ b/bibdatabase.bib
@@ -455,6 +455,22 @@ eprint = {arXiv:1005.5718 [physics.soc-ph]}
   publisher = {American Physical Society}
 }
 
+
+@article{Boehm1993,
+  title = {Egalitarian Behavior and Reverse Dominance Hierarchy [and Comments and Reply]},
+  author = {Boehm, Christopher and Barclay, Harold B. and Dentan, Robert Knox and Dupre, Marie-Claude and Hill, Jonathan D. and Kent, Susan and Knauft, Bruce M. and Otterbein, Keith F. and Rayner, Steve},
+  journal = {Current Anthropology},
+  volume = {34},
+  number = {3},
+  pages = {pp. 227-254},
+  url = {http://www.jstor.org/stable/2743665},
+  ISSN = {00113204},
+  year = {1993},
+  publisher = {The University of Chicago Press on behalf of Wenner-Gren Foundation for Anthropological Research},
+  copyright = {Copyright © 1993 The University of Chicago Press},
+}
+    
+    
 @book{Boehm2001,
   title={Hierarchy in the Forest: The Evolution of Egalitarian Behavior},
   author={Boehm, C},
@@ -554,4 +570,36 @@ journal={ Journal of Human Evolution},
 volume={20} ,
 pages={469-93},
 }
+
+
+@book{Foley1987,
+  title={Another unique species: patterns in human evolutionary ecology},
+  author={Foley, R.},
+  isbn={9780470207284},
+  lccn={lc86023442},
+  url={http://books.google.com.br/books?id=AjuAAAAAMAAJ},
+  year={1987},
+  publisher={Longman Scientific \& Technical}
+}
+
+@book{landau2005,
+  title={A Guide To Monte Carlo Simulations In Statistical Physics},
+  author={Landau, D.P. and Binder, K.},
+  isbn={9780521842389},
+  lccn={2005285370},
+  url={http://books.google.com.br/books?id=11tun6Y5tOAC},
+  year={2005},
+  publisher={Cambridge University Press}
+}
+
+@book{goodall2002,
+  title={What separates us from chimpanzees},
+  author={Jane Goodall},
+  url={http://www.ted.com/talks/jane_goodall_on_what_separates_us_from_the_apes.html},
+  year={2002},
+  month={Março de},
+  publisher={TED Talk}
+}
+
+
 
