--- a/confs/packs.tex
+++ b/confs/packs.tex
@@ -6,6 +6,7 @@
 \usepackage{makeidx}
 \usepackage{bm}
 \usepackage{color}
+\usepackage{epigraph}
 
 % If this error started happening:
 % 	! Argument of \@iiminipage has an extra }.
