--- a/main.tex
+++ b/main.tex
@@ -14,10 +14,11 @@
 	  \input{./tex/pretext/paginatitulo}
 	  \input{./tex/pretext/folhaderosto}
 	  \input{./tex/pretext/creativecommons}
-	  \tableofcontents
-	  \listoffigures
-	  %\listoftables
+	  \input{./tex/pretext/agradecimentos}
+	  \input{./tex/pretext/epigrafe}
 	  \include{./tex/pretext/resumo}
+	  \listoffigures
+	  \tableofcontents
   %body of chapters
 	  \include{./tex/introducao}
 	  \include{./tex/copulas}
@@ -32,6 +33,6 @@
   \appendix
 % 	  \include{./tex/apendices/glossario}
 	  \include{./tex/apendices/provas}
-	  \include{./tex/apendices/erdosrenyi}
+% 	  \include{./tex/apendices/erdosrenyi}
 
 \end{document}
